--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -40,13 +40,13 @@
                                     {{ .Site.Title }}
                             {{ end }} 
                             on 
-                            {{ .Date.Format "Monday, January 2, 2006" }}
+                            {{ .Date.Format "2006-01-02 15:04:05" }}
                             {{ if .Site.Params.page_view_conter }}
                                 {{ partial "page_view_counter.html" . }}
                             {{ end }}
                             <!-- Don't show "Last Modified on" if update happened on the same day. -->
-                            {{ if (and (not .Lastmod.IsZero) (not (eq (dateFormat "2006-01-02" .Lastmod) (dateFormat "2006-01-02" .Date)))) }}
-                            <br>Last Modified on {{ dateFormat "Monday, January 2, 2006" .Params.LastMod }}
+                            {{ if (and (not .Lastmod.IsZero) (not (eq (dateFormat "2006-01-02 15:04:05" .Lastmod) (dateFormat "2006-01-02 15:04:05" .Date)))) }}
+                            <br>Last Modified on {{ dateFormat "2006-01-02 15:04:05" .Params.LastMod }}
                             {{ end }}
                         {{ end }}    
                     </span>
