--- a/layouts/partials/post_list.html
+++ b/layouts/partials/post_list.html
@@ -29,10 +29,10 @@
             {{ end }}
         {{ end }}
     {{ else }}
-        Posted by {{ with .Params.author }}{{ . }}{{ else }}{{ .Site.Title }}{{ end }} on {{ .Date.Format "Monday, January 2, 2006" }}
+        Posted by {{ with .Params.author }}{{ . }}{{ else }}{{ .Site.Title }}{{ end }} on {{ .Date.Format "2006-01-02 15:04:05" }}
         <!-- Don't show "Last Modified on" if update happened on the same day. -->
-        {{ if (and (not .Lastmod.IsZero) (not (eq (dateFormat "2006-01-02" .Lastmod) (dateFormat "2006-01-02" .Date)))) }}
-            <br>Last Modified on {{ dateFormat "Monday, January 2, 2006" .Params.LastMod }} 
+        {{ if (and (not .Lastmod.IsZero) (not (eq (dateFormat "2006-01-02 15:04:05" .Lastmod) (dateFormat "2006-01-02 15:04:05" .Date)))) }}
+            <br>Last Modified on {{ dateFormat "2006-01-02 15:04:05" .Params.LastMod }}
         {{ end }}
     {{ end }}
     </p>
