feat: 引入 bootstrap-icons (CDN方式)

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -90,6 +90,8 @@
     <script src="{{ . | absURL }}"></script>
     {{ end }}
 
+    <!-- bootstrap-icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 {{ if .Site.Config.Services.GoogleAnalytics.ID }}
