--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -33,20 +33,14 @@
                                 {{ end }}
                             {{ end }}
                         {{ else }}
-                            Posted by 
-                            {{ if .Params.author }}
-                                {{ .Params.author }}
-                            {{ else }}
-                                    {{ .Site.Title }}
-                            {{ end }} 
-                            on 
+                            <i class="bi bi-vector-pen"></i>
                             {{ .Date.Format "2006-01-02 15:04:05" }}
                             {{ if .Site.Params.page_view_conter }}
                                 {{ partial "page_view_counter.html" . }}
                             {{ end }}
                             <!-- Don't show "Last Modified on" if update happened on the same day. -->
                             {{ if (and (not .Lastmod.IsZero) (not (eq (dateFormat "2006-01-02 15:04:05" .Lastmod) (dateFormat "2006-01-02 15:04:05" .Date)))) }}
-                            <br>Last Modified on {{ dateFormat "2006-01-02 15:04:05" .Params.LastMod }}
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="bi bi-stopwatch"></i> {{ dateFormat "2006-01-02 15:04:05" .Params.LastMod }}
                             {{ end }}
                         {{ end }}    
                     </span>
