--- a/static/css/hugo-theme-cleanwhite.css
+++ b/static/css/hugo-theme-cleanwhite.css
@@ -67,7 +67,7 @@ body{
     overflow-x:hidden
 }
 p{
-    margin:30px 0
+    margin:15px 0;
 }
 h1,h2,h3,h4,h5,h6{
     font-family:-apple-system,"Helvetica Neue",Arial,"PingFang SC","Hiragino Sans GB",STHeiti,"Microsoft YaHei","Microsoft JhengHei","Source Han Sans SC","Noto Sans CJK SC","Source Han Sans CN","Noto Sans SC","Source Han Sans TC","Noto Sans CJK TC","WenQuanYi Micro Hei",SimSun,sans-serif;
@@ -136,7 +136,8 @@ pre code{
     display:block;
     width:auto;
     white-space:pre;
-    word-wrap:normal
+    word-wrap:normal;
+    line-height:1.7;
 }
 .post-container a{
     color:#337ab7
